--- a/index.html
+++ b/index.html
@@ -40,5 +40,8 @@
     <input type="number" id="phone" placeholder="Phone"><br>
     <textarea name="message" id="message" placeholder="Message"></textarea>
 </section>
+<footer>
+    <p>Copyright &copy;2023 All rights reserved | This template is made with love by Colorlib.com</p>
+</footer>
 </body>
 </html>
