--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <label for="name"></label>
     <input type="text" id="name" placeholder="Name"><br>
     <label for="email"></label>
-    <input type="text" id="email" placeholder="Email"><br>
+    <input type="email" id="email" placeholder="Email"><br>
     <label for="phone"></label>
-    <input type="number" id="phone" placeholder="Phone"><br>
+    <input type="tel" id="phone" placeholder="Phone"><br>
     <textarea name="message" id="message" placeholder="Message"></textarea>
 </section>
 <footer>
